[package]
name = "decentralized-automation-networks_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
serde_with = { version = "3.0.0", features = ["alloc", "macros", "std", "json"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
clap = { version = "4.3.3", features = ["derive"] }

